--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
